--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+h1{
+    color: rgb(42, 35, 44);
+    text-align: center;
+}
+.container{
+    width: 500px;
+    /* height: 600px; */
+    margin: 0 auto;
+    background-color: silver;
+}
+.btn-1{
+    margin-right: 100px;
+    margin-top: 34px;
+    font-size: 20px;
+}
+.btn-2{
+    margin: 50px;
+    font-size: 18px;
+    text-align: center;
+    background-color: #dddddd;
+}
